# opl

./: .gitignore  Makefile  README.md  generate_sample_data.py  guess.py  guess_reward.py  guess_tk.py  idea.md  prd.md  pyproject.toml
data/: domain_logistics.yaml
scripts/: retrain.py
src/opl/: __init__.py  cli.py
src/opl/adapter/: __init__.py  duckdb_adapter.py  logistics.py
src/opl/config/: __init__.py  schema.py
src/opl/engine/: __init__.py  cold_start.py  decision.py
src/opl/evaluator/: __init__.py  cost.py
src/opl/model/: __init__.py  action.py  rules.py  world_model.py
src/opl/simulator/: __init__.py  batched.py  rollout.py
src/opl/state/: __init__.py  builder.py  vector.py
tests/integration/: test_cold_start.py
tests/unit/: test_config.py  test_duckdb.py  test_engine.py  test_multi_entity.py  test_persistence.py  test_scale.py  test_simulator.py  test_state.py  test_world_model.py
