[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opl"
version = "0.1.0"
description = "Cognitive Decision Engine for Stateful Systems"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.scripts]
opl = "opl.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (component chains)",
    "slow: Slow tests (historical replay, large data)",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N806"] # Allow X and Y for math matrices

[tool.setuptools.packages.find]
where = ["src"]
